--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,2 +1,7 @@
-[pre-commit]
-command = yamllint .
+---
+- id: yamllint
+  name: yamllint
+  description: This hook runs yamllint.
+  entry: yamllint
+  language: python
+  types: [file, yaml]
