fix pre-commit config 🧠

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 ---
-- id: yamllint
-  name: yamllint
-  description: This hook runs yamllint.
-  entry: yamllint
-  language: python
-  types: [file, yaml]
+repos:
+  - id: yamllint
+    name: yamllint
+    description: This hook runs yamllint.
+    entry: yamllint
+    language: python
+    types: [file, yaml]
