--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,7 @@
 ---
 repos:
-  - id: yamllint
-    name: yamllint
-    description: This hook runs yamllint.
-    entry: yamllint
-    language: python
-    types: [file, yaml]
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.17.0
+    hooks:
+      - id: yamllint
+        args: [-c=.yamllint]
