--- a/themes/ios.yaml
+++ b/themes/ios.yaml
@@ -3,7 +3,7 @@
 # iOS Dark Mode Theme
 #
 ios:
-  # background from https://9to5mac.com/2019/08/02/download-ios-13-homekit-home-app-wallpapers/
+  # Global
   background-image: 'center / cover no-repeat url("/local/backgrounds/homekit-bg-3.png") fixed'
   accent-color: "#FFF"
   primary-color: "rgba(255,128,0,1)"
@@ -11,23 +11,23 @@ ios:
   primary-background-color: "#23232E"
   secondary-background-color: rgba(25, 25, 25, 0.7)
   divider-color: "#FFF"
-  ### Text ###
+  # Text
   primary-text-color: "#FFF"
   secondary-text-color: "#d3d3d3"
   text-primary-color: "#FFF"
   disabled-text-color: "#4E4E66"
   text-dark-color: '#FFF'
-  ### Sidebar Menu ###
+  # Sidebar Menu
   sidebar-icon-color: "#B6B6C1"
-  sidebar-text  -color: "#F1F1F1"
+  sidebar-text-color: "#F1F1F1"
   sidebar-selected-background-color: var(--primary-background-color)
   sidebar-selected-icon-color: "#FFF"
   sidebar-selected-text-color: var(--sidebar-selected-icon-color)
-  ### States and Badges ###
+  # States and Badges
   state-icon-color: "#FFF"
   state-icon-active-color: "#FFF"
   state-icon-unavailable-color: var(--disabled-text-color)
-  ### Sliders ###
+  # Sliders
   paper-slider-knob-color: "#FFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
@@ -36,30 +36,29 @@ ios:
   paper-slider-container-color: rgba(255,255,255,.5)
   paper-slider-font-color: "#000"
   ha-slider-background: none !important
-  ### Labels ###
+  # Labels
   label-badge-background-color: "#23232E"
   label-badge-text-color: "#F1F1F1"
   label-badge-red: "rgba(255,128,0,.5)"
-  ### Cards ###
+  # Cards
   paper-listbox-background-color: var(--primary-background-color)
-  ### Toggles ###
+  ha-card-border-radius: 25px
+  ha-card-background: rgba(66, 66, 66, 0.4)
+  paper-card-background-color: var(--ha-card-background)
+  # Toggles
   paper-toggle-button-checked-button-color: "#484848"
   paper-toggle-button-checked-bar-color: "#484848"
   paper-toggle-button-unchecked-button-color: var(--paper-toggle-button-checked-button-color)
   paper-toggle-button-unchecked-bar-color: var(--disabled-text-color)
-  ### Table row ###
+  # Table row
   table-row-background-color: var(--primary-background-color)
   table-row-alternative-background-color: var(--secondary-background-color)
-  ### Other
-  ha-card-border-radius: 20px
-  ha-card-background: rgba(66, 66, 66, 0.4)
-  paper-card-background-color: var(--ha-card-background)
+  # Other
   paper-dialog-background-color: rgba(55, 55, 55, 0.5)
   more-info-header-background: rgba(25, 25, 25, 0.5)
-  ### Custom
+  # Custom
   mini-media-player-accent-color: var(--primary-text-color)
-  mini-media-player-overlay-color: rgba(255, 255, 255, 0.5)
-  mini-media-player-artwork-opacity: 0.5
+  mini-media-player-artwork-opacity: 0.7
   mcg-title-letter-spacing: .15em
   paper-font-body1_-_font-weight: 500
   paper-font-display1_-_font-weight: 500
