--- a/themes/ios.yaml
+++ b/themes/ios.yaml
@@ -56,6 +56,7 @@ ios:
   # Other
   paper-dialog-background-color: rgba(55, 55, 55, 0.5)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  switch-checked-color: "#30d158"  # XXX: switch__thumb should be grey!
   # Custom
   mini-media-player-accent-color: var(--primary-text-color)
   mini-media-player-artwork-opacity: 0.7
