fix from https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42

--- a/themes/ios-themes.yaml
+++ b/themes/ios-themes.yaml
@@ -65,6 +65,7 @@ ios-light-mode-dark-green:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -135,6 +136,7 @@ ios-light-mode-dark-green-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -205,6 +207,7 @@ ios-dark-mode-dark-green:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -275,6 +278,7 @@ ios-dark-mode-dark-green-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -345,6 +349,7 @@ ios-light-mode-light-blue:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -415,6 +420,7 @@ ios-light-mode-light-blue-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -485,6 +491,7 @@ ios-dark-mode-light-blue:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -555,6 +562,7 @@ ios-dark-mode-light-blue-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -625,6 +633,7 @@ ios-light-mode-light-green:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -695,6 +704,7 @@ ios-light-mode-light-green-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -765,6 +775,7 @@ ios-dark-mode-light-green:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -835,6 +846,7 @@ ios-dark-mode-light-green-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -905,6 +917,7 @@ ios-light-mode-orange:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -975,6 +988,7 @@ ios-light-mode-orange-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1045,6 +1059,7 @@ ios-dark-mode-orange:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1115,6 +1130,7 @@ ios-dark-mode-orange-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1185,6 +1201,7 @@ ios-light-mode-blue-red:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1255,6 +1272,7 @@ ios-light-mode-blue-red-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1325,6 +1343,7 @@ ios-dark-mode-blue-red:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1395,6 +1414,7 @@ ios-dark-mode-blue-red-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1465,6 +1485,7 @@ ios-light-mode-red:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1535,6 +1556,7 @@ ios-light-mode-red-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1605,6 +1627,7 @@ ios-dark-mode-red:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1675,6 +1698,7 @@ ios-dark-mode-red-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1745,6 +1769,7 @@ ios-light-mode-dark-blue:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1815,6 +1840,7 @@ ios-light-mode-dark-blue-alternative:
   paper-dialog-background-color: rgba(200, 200, 200, 0.8)
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1885,6 +1911,7 @@ ios-dark-mode-dark-blue:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1955,6 +1982,7 @@ ios-dark-mode-dark-blue-alternative:
   paper-dialog-background-color: rgba(55, 55, 55, 0.6)
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
